@@ -96,6 +96,9 @@ class ContactModelCategory extends JModelList
 				$params->loadString($item->params);
 				$item->params = $params;
 			}
+			$this->tags = new JHelperTags;
+			$this->tags->getItemTags('com_contact.contact', $item->id);
+
 		}
 
 		return $items;
@@ -316,8 +319,6 @@ class ContactModelCategory extends JModelList
 				$this->_parent = false;
 			}
 		}
-		$this->tags = new JHelperTags;
-		$this->tags->getItemTags('com_contact.category', $this->_item->get('id'));
 
 		return $this->_item;
 	}
